Fix alignment of buttons
- Address issue #36

--- a/data/css/welcome.css
+++ b/data/css/welcome.css
@@ -232,7 +232,8 @@ color: white;
   height: 40px;
   width: 90%;
   text-align: center;
-  line-height: 2.2em
+  line-height: 2.2em;
+  margin: auto 5%;
 }
 
 .button-group .btn-icon {
